--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- rebuild -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -276,6 +277,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
